fix text-overflow problem on FieldReferenceEdit

--- a/app/components/FieldReference/FieldReference.css
+++ b/app/components/FieldReference/FieldReference.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-flow: column nowrap;
   align-items: flex-start;
+  min-width: 0;
 }
 
 .edit-value-container .values {
@@ -26,10 +27,11 @@
 }
 
 .value,
-.list-value {
+.value-link {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  max-width: 100%;
 }
 
 .value-link {
